--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-personal-starter-blog",
+  "name": "kimdee",
   "private": true,
-  "description": "A personal blog starter for a blog powered by Netlify CMS, based on the default blog starter",
+  "description": "kimdee's personal blog",
   "version": "2.0.0",
-  "author": "Thomas Wang <thomas@wang.sh>",
+  "author": "Doy Kim",
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
